<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="100dp">


    <androidx.cardview.widget.CardView
        android:id="@+id/cardView2"
        android:layout_width="0dp"
        android:layout_height="95dp"
        card_view:layout_constraintBottom_toBottomOf="parent"
        card_view:layout_constraintEnd_toEndOf="parent"
        card_view:layout_constraintHorizontal_bias="0.0"
        card_view:layout_constraintStart_toStartOf="parent"
        card_view:layout_constraintTop_toTopOf="parent"
        card_view:layout_constraintVertical_bias="0.0">

        <TextView
            android:id="@+id/id_nodeItemLabelNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNome"
            android:translationX="50dp"
            android:translationY="20dp" />

        <TextView
            android:id="@+id/id_nodeItemNome"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="97dp"
            android:translationY="20dp" />

        <TextView
            android:id="@+id/id_nodeItemLabelEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewEmail"
            android:translationX="50dp"
            android:translationY="40dp" />

        <TextView
            android:id="@+id/id_nodeItemEmail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="99dp"
            android:translationY="40dp" />

        <TextView
            android:id="@+id/id_nodeItemLabelUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/textViewNomeDeUsuario"
            android:translationX="50dp"
            android:translationY="60dp" />

        <TextView
            android:id="@+id/id_nodeItemUsername"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:translationX="130dp"
            android:translationY="60dp" />
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>